--- a/client/e-commerce-project/src/components/Footer/footer.scss
+++ b/client/e-commerce-project/src/components/Footer/footer.scss
@@ -13,6 +13,10 @@
         .left{
 
         }
-        .right{}
+        .right{
+            img{
+                width: 30%;
+            }
+        }
     }
 }
