--- a/client/e-commerce-project/src/components/Navbar/Navbar.scss
+++ b/client/e-commerce-project/src/components/Navbar/Navbar.scss
@@ -1,105 +1,105 @@
-/* Stilurile pentru bara de navigație */
+
 .navbar {
-    height: 70px;
+  font-family: sans-serif !important;
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0px 30px;
+  width: 100%;
+  z-index: 999;
+  transition: all 0.3s ease;
+  margin-top: 0 !important;
+
+  &.menu-open {
+    .menu-items {
+      display: flex;
+      width: 100%;
+      justify-content: center;
+      left: 0;
+      top: 70px;
+    }
+  }
+  .menu-icon {
+   
+    cursor: pointer;
+    margin-right: 10px;
+  }
+
+  .center {
+    margin: 0 auto;
+    font-size: 50px;
+
+font-family: 'Playfair Display', serif;
+  }
+
+  .link {
+    text-decoration: none;
+    font-weight: bold;
+    transition: color 0.2s;
+
+    &:hover {
+      color: #263196;
+    }
+  }
+
+  .right {
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    padding: 10px 30px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 999;
-    transition: all 0.3s ease;
 
-  
-    &.menu-open {
-      .menu-items {
-        display: flex;
-      }
-    }
-  
-    .menu-icon {
+    .icons {
+      display: flex;
+      align-items: center;
+      margin-right: 50px;
       cursor: pointer;
-      font-size: 30px;
-      margin-right: 10px;
     }
-  
-    .center {
-      margin: 0 auto;
-      font-size: 50px;
-      font-family: 'Dancing Script', cursive;
-    }
-  
-    .link {
-      text-decoration: none;
-      font-weight: bold;
-      transition: color 0.2s;
-     
-  
-      &:hover {
-        color: #263196;;
-      }
-    }
-  
-    .right {
+
+    .cartIcon {
+      position: relative;
+      cursor: pointer;
+
+      span {
+        font-size: 12px;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background-color: #263196;
+        color: white;
+        position: absolute;
+        right: -10px;
+        top: -10px;
         display: flex;
         align-items: center;
-
-      
-        .icons {
-          display: flex;
-          align-items: center;
-          margin-right: 50px;
-          cursor: pointer;
-        }
-      
-        .cartIcon {
-          position: relative;
-          cursor: pointer;
-      
-          span {
-            font-size: 12px;
-            width: 20px;
-            height: 20px;
-            border-radius: 50%;
-            background-color: #263196;
-            color: white;
-            position: absolute;
-            right: -10px;
-            top: -10px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-          }
-        }
+        justify-content: center;
       }
-      
-     
-      .menu-items {
-        width: max-content;
-        display: none;
-        background-color: #ffffff;
-        flex-direction: column;
-        align-items: center;
-        position: absolute;
-        top: 55px;
-        left: 0;
-        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
-        padding: 10px;
-        z-index: 1000;
-        font-size: 16px;
-      
-    
-        .item {
-          margin: 10px 0;
-          display: flex;
-          align-items: center;
-          margin: 10px;
-        }
-      
-        .MuiSvgIcon-root {
-          font-size: 18px;
-          margin-left: 5px;
-        }
-      }}
+    }
+  }
+
+  .menu-items {
+    width: max-content;
+    display: none;
+    background-color: #ffffff;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    top: 55px;
+    left: 0;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.2);
+    padding: 10px;
+    z-index: 1000;
+    font-size: 15px;
+    text-transform: uppercase;
+
+    .item {
+      margin: 10px 0;
+      display: flex;
+      align-items: center;
+      margin: 10px;
+    }
+
+    .MuiSvgIcon-root {
+      font-size: 18px;
+      margin-left: 5px;
+    }
+  }
+}
