--- a/client/e-commerce-project/src/components/Footer/footer.scss
+++ b/client/e-commerce-project/src/components/Footer/footer.scss
@@ -1,22 +1,61 @@
-.footer{
-    margin: 100px 200px 20px 200px;
-    .top{
+.footer {
+    margin: 20px 10px; /* Reduceți marginea pentru a se potrivi dispozitivelor mobile */
+  
+    .top {
+      width: 100%;
+      display: flex;
+      gap: 20px; /* Reduceti distanta intre elemente pentru a se potrivi dispozitivelor mobile */
+      flex-wrap: wrap;
+    }
+  
+    .item {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      margin-bottom: 20px; /* Adaugati spatiu intre elemente pentru a se potrivi dispozitivelor mobile */
+    }
+  
+    .bottom {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 20px;
+  
+      .left {
         display: flex;
-        gap: 50px;
-    }
-    .item{
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-    }
-    .bottom{
-        .left{
-
+        align-items: center;
+        flex-direction: column; /* Schimbați direcția pentru a se potrivi dispozitivelor mobile */
+        text-align: center; /* Aliniați textul în centru */
+        margin-bottom: 20px; /* Adaugati spatiu intre elemente pentru a se potrivi dispozitivelor mobile */
+      }
+  
+      .logo {
+        color: #263196;
+        font-weight: bold;
+        font-size: 24px;
+        margin-bottom: 10px; /* Adaugati spatiu intre elemente pentru a se potrivi dispozitivelor mobile */
+      }
+  
+      .copyright {
+        font-size: 12px;
+        color: gray;
+      }
+  
+      .right {
+        img {
+          height: 80px; 
+          max-width: 100%;
+        
         }
-        .right{
-            img{
-                width: 30%;
-            }
-        }
+      }
     }
-}
+  }
+  
+  
+  @media (max-width: 768px) {
+    .footer {
+      margin: 20px 10px; 
+      text-align: center; 
+    }
+  }
+  
