--- a/client/e-commerce-project/src/components/Slider/Slider.scss
+++ b/client/e-commerce-project/src/components/Slider/Slider.scss
@@ -12,6 +12,7 @@ body {
     width: 300vw;
     height: 100%;
     display: flex;
+    transition: all 1s ease;
 
     img {
       margin: 0 !important;
@@ -36,6 +37,7 @@ body {
             display: flex;
             align-items: center;
             justify-content: center;
+            cursor: pointer;
         }
   }
 }
