--- a/client/e-commerce-project/src/components/Footer/footer.scss
+++ b/client/e-commerce-project/src/components/Footer/footer.scss
@@ -1,10 +1,11 @@
 .footer {
-    margin: 20px 10px; /* Reduceți marginea pentru a se potrivi dispozitivelor mobile */
+    margin: 50px 50px; 
   
     .top {
       width: 100%;
       display: flex;
-      gap: 20px; /* Reduceti distanta intre elemente pentru a se potrivi dispozitivelor mobile */
+      justify-content: center;
+      gap: 20px;
       flex-wrap: wrap;
     }
   
@@ -12,28 +13,32 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      margin-bottom: 20px; /* Adaugati spatiu intre elemente pentru a se potrivi dispozitivelor mobile */
+      margin-bottom: 20px; 
     }
-  
+  .item1{
+    flex: 1;
+  }
+  .item2{
+    flex:2;
+  }
     .bottom {
       display: flex;
-      justify-content: space-between;
+      justify-content: space-around;
       align-items: center;
       margin: 20px;
   
       .left {
         display: flex;
         align-items: center;
-        flex-direction: column; /* Schimbați direcția pentru a se potrivi dispozitivelor mobile */
-        text-align: center; /* Aliniați textul în centru */
-        margin-bottom: 20px; /* Adaugati spatiu intre elemente pentru a se potrivi dispozitivelor mobile */
-      }
+        flex-direction: column; 
+        text-align: center; 
+        margin-bottom: 20px; 
   
       .logo {
         color: #263196;
         font-weight: bold;
         font-size: 24px;
-        margin-bottom: 10px; /* Adaugati spatiu intre elemente pentru a se potrivi dispozitivelor mobile */
+        margin-bottom: 10px;
       }
   
       .copyright {
@@ -42,15 +47,15 @@
       }
   
       .right {
+  
         img {
-          height: 80px; 
-          max-width: 100%;
+          height: 70px; 
         
         }
       }
     }
   }
-  
+}
   
   @media (max-width: 768px) {
     .footer {
