--- a/client/e-commerce-project/src/components/Slider/Slider.scss
+++ b/client/e-commerce-project/src/components/Slider/Slider.scss
@@ -7,6 +7,7 @@ body {
   height: calc(100vh - 80px);
   width: 100vw;
   position: relative;
+  overflow: hidden;
   .container {
     margin-top: 20px;
     width: 300vw;
