--- a/client/e-commerce-project/src/pages/Product/Product.scss
+++ b/client/e-commerce-project/src/pages/Product/Product.scss
@@ -1,17 +1,32 @@
-.product{
-    padding: 20px 50px;
+.product {
+  padding: 20px 50px;
+  display: flex;
+  gap: 50px;
+  .left {
+    flex: 1;
     display: flex;
-    gap: 50px;
-    .left{
-        flex: 1;
-        .images{
-
-        }
-        .mainImg{
-
-        }
+    gap: 20px;
+    .images {
+      flex: 1;
+    
+      img{
+        width: 100%;
+        height: 150px;
+        object-fit: cover;
+        cursor: pointer;
+        margin-bottom: 10px;
+      }
     }
-    .right{
-        flex: 1;
+    .mainImg {
+      flex: 5;
+      img{
+        width: 100%;
+        max-height: 800px;
+        object-fit: cover;
+      }
     }
+  }
+  .right {
+    flex: 1;
+  }
 }
