--- a/client/e-commerce-project/src/components/Navbar/Navbar.scss
+++ b/client/e-commerce-project/src/components/Navbar/Navbar.scss
@@ -110,9 +110,15 @@
 
     .menu-icon {
       margin-left: 0 !important;
+    }
       .center {
         font-size: 30px;
       }
+      .right{
+        .icon{
+          margin: 0;
+        }
+      }
     }
   }
-}
+
