--- a/client/e-commerce-project/src/components/List/List.scss
+++ b/client/e-commerce-project/src/components/List/List.scss
@@ -2,4 +2,9 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+   
 }
+@media (max-width: 768px) {
+    .list{
+  text-align: center;
+  }}
