--- a/client/e-commerce-project/src/pages/Product/Product.scss
+++ b/client/e-commerce-project/src/pages/Product/Product.scss
@@ -28,5 +28,63 @@
   }
   .right {
     flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    
+    .price{
+    font-style: 30px;
+    color: #263196;
+    font-weight: 500;
+    }
+
+    p{
+      font-size: 18px;
+      font-weight: 300;
+      text-align: justify;
+    }
+
+    .quantity{
+      display: flex;
+      gap: 10px;
+      align-items: center;
+
+      button{
+        width: 50px;
+        height: 50px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        cursor: pointer;
+        border: none;
+      }
+    }
+
+    .add{
+      width: 250px;
+      padding: 10px;
+      background-color: #263196;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 20px;
+      cursor: pointer;
+      border: none;
+      font-weight: 500;
+    }
+
+    .link{
+      display: flex;
+      gap: 20px;
+
+      .item{
+        display: flex;
+        align-items: center;
+        display: 10px;
+        color: #263196;
+        font-size: 14;
+      }
+    }
   }
 }
