--- a/client/e-commerce-project/src/components/Categories/Categories.scss
+++ b/client/e-commerce-project/src/components/Categories/Categories.scss
@@ -44,3 +44,14 @@
         }
     }
 }
+
+@media (max-width: 768px) {
+    .categories{
+         .row{
+button{
+    font-size: 0.8em;
+    text-transform: none;
+}
+         } 
+
+        }}
