--- a/client/e-commerce-project/src/pages/Product/Product.scss
+++ b/client/e-commerce-project/src/pages/Product/Product.scss
@@ -73,6 +73,21 @@
       border: none;
       font-weight: 500;
     }
+    .favorite{
+      
+        width: 250px;
+        padding: 10px;
+        background-color: #E98FA3;
+        color: white;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 20px;
+        cursor: pointer;
+        border: none;
+        font-weight: 500;
+    
+    }
 
     .link{
       display: flex;
