--- a/client/e-commerce-project/src/components/List/List.scss
+++ b/client/e-commerce-project/src/components/List/List.scss
@@ -1,7 +1,8 @@
 .list{
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     flex-wrap: wrap;
+    gap: 10px;
    
 }
 @media (max-width: 768px) {
