--- a/client/e-commerce-project/src/components/Categories/Categories.scss
+++ b/client/e-commerce-project/src/components/Categories/Categories.scss
@@ -34,7 +34,9 @@
             border: none;
             background-color: white;
             text-transform: uppercase;
-            font-weight: 500;
+            font-weight: 600;
+            color: black;
+
         }
 
         img{
