--- a/client/e-commerce-project/src/components/List/List.scss
+++ b/client/e-commerce-project/src/components/List/List.scss
@@ -1,8 +1,8 @@
 .list{
     display: flex;
-    justify-content: space-around;
+    justify-content: flex-start;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 20px;
    
 }
 @media (max-width: 768px) {
