--- a/client/e-commerce-project/src/components/Navbar/Navbar.scss
+++ b/client/e-commerce-project/src/components/Navbar/Navbar.scss
@@ -54,6 +54,12 @@
     .icon {
       margin: 5px;
     }
+    .searchIcon{
+      color: black;
+    }
+    .searchIcon:hover{
+      color: #263196;
+    }
     .cartIcon {
       position: relative;
       cursor: pointer;
