--- a/client/e-commerce-project/src/pages/Favorite/Favorite.scss
+++ b/client/e-commerce-project/src/pages/Favorite/Favorite.scss
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-bottom: 20%;
+  margin-bottom: 10%;
 
   h2 {
     font-size: 2em;
@@ -26,9 +26,9 @@
       gap: 20px;
       flex: 1;
       background-color: #fff;
-      border: 1px solid #ddd;
+      border: none;
       padding: 15px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+      
 
       img {
         max-width: 100%;
