--- a/client/e-commerce-project/src/components/Navbar/Navbar.scss
+++ b/client/e-commerce-project/src/components/Navbar/Navbar.scss
@@ -60,6 +60,12 @@
     .searchIcon:hover{
       color: #263196;
     }
+    .auth-icon{
+      color: black;
+    }
+    .auth-icon:hover{
+      color: #263196;
+    }
     .cartIcon {
       position: relative;
       cursor: pointer;
