--- a/client/e-commerce-project/src/components/List/List.scss
+++ b/client/e-commerce-project/src/components/List/List.scss
@@ -1,6 +1,6 @@
 .list{
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 20px;
    
