--- a/client/e-commerce-project/src/components/SearchList/SearchList.scss
+++ b/client/e-commerce-project/src/components/SearchList/SearchList.scss
@@ -1,6 +1,6 @@
 .searchList{
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     flex-wrap: wrap;
     gap: 10px;
    
