--- a/client/e-commerce-project/src/components/Navbar/Navbar.scss
+++ b/client/e-commerce-project/src/components/Navbar/Navbar.scss
@@ -28,7 +28,7 @@
   .center {
     margin: 0 auto;
     font-size: 40px;
-    font-family: "Mooli", sans-serif;
+    // font-family: "Mooli", sans-serif;
   }
 
   .link {
